vbnc/vbnc/tests/Errors/30451-3.vb
Module ForEach
    Public Function test()
        For Each item As Integer In New Integer() {0, 1, 2}

        Next item2
        Return 0
    End Function
End Module
